Fix invitation-row flexbox alignment issues

--- a/engines/tahi_standard_tasks/app/assets/stylesheets/tahi_standard_tasks/_invitations.scss
+++ b/engines/tahi_standard_tasks/app/assets/stylesheets/tahi_standard_tasks/_invitations.scss
@@ -108,7 +108,7 @@ $invite-padding: $invite-padding-vertical $invite-padding-horizontal;
 }
 
 .invitation-item--primary {
-  border-top-color: $tahi-grey-dark;  
+  border-top-color: $tahi-grey-dark;
 }
 
 .invitation-item--alternate {
@@ -129,6 +129,7 @@ $invite-padding: $invite-padding-vertical $invite-padding-horizontal;
 /* Invitation Item Header
    .invitation-item-header
      .invitation-item-full-name
+     .invitation-item-item-status
      .invitation-item-body-preview
      .invitation-item-actions
 ---------------------------------------------------------------------------- */
@@ -140,12 +141,12 @@ $invite-padding: $invite-padding-vertical $invite-padding-horizontal;
 }
 
 .invitation-item-header > * {
-  flex: 1 0 auto;
-  padding: $invite-padding-vertical 0;
+  flex: 0 0 auto;
+  padding: $invite-padding-vertical 0 $invite-padding-vertical $invite-padding-horizontal;
 }
 
-.invitation-item-header > :first-child {
-  padding-left: $invite-padding-horizontal;
+.invitation-item-spacer {
+  flex-grow: 1;
 }
 
 .invitation-item--closed {
@@ -202,8 +203,9 @@ $invite-padding: $invite-padding-vertical $invite-padding-horizontal;
 .invitation-item--alternate {
   .invitation-item-full-name {
     padding-left: 3rem;
+
     .alternate-link-icon {
-     padding-right: .3rem;
+       padding-right: 0.3rem;
     }
   }
 }
@@ -211,17 +213,15 @@ $invite-padding: $invite-padding-vertical $invite-padding-horizontal;
 .invitation-item-body-preview {
   display: none;
   overflow: hidden;
-  flex: 0 1 auto;
-  padding-left: $invite-padding-horizontal;
+  flex-shrink: 1;
   cursor: pointer;
   text-overflow: ellipsis;
   white-space: nowrap;
 }
 
 .invitation-item-full-name {
-  width: 30%;
-  flex-grow: 0;
-  padding-left: $invite-padding-horizontal;
+  width: 32%;
+  padding-right: 1rem;
   cursor: pointer;
 }
 
@@ -229,21 +229,12 @@ $invite-padding: $invite-padding-vertical $invite-padding-horizontal;
   font-weight: bold;
 }
 
-.invitation-item-updated-at {
-  flex-grow: 2;
-  padding-left: $invite-padding-horizontal;
-  cursor: pointer;
-}
-
-.invitation-state--accepted .invitation-item-updated-at {
-  font-weight: bold;
-}
-
 .invitation-item-status {
-  width: 15%;
+  width: 18%;
 }
 
 .invitation-item-actions {
+  flex-basis: auto;
   padding: 0 $invite-padding-horizontal 0 0;
   text-align: right;
 }
